--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
   "dependencies": {
     "directory": "^0.1.0",
+    "expo-dev-client": "^5.2.4",
     "react-native-vector-icons": "^10.2.0"
+    
   }
 }
