--- a/frontend/android/build.gradle
+++ b/frontend/android/build.gradle
@@ -35,4 +35,4 @@ allprojects {
 
 apply plugin: "expo-root-project"
 apply plugin: "com.facebook.react.rootproject"
-apply from: file("../../node_modules/react-native-vector-icons/fonts.gradle")
+//apply from: file("../node_modules/react-native-vector-icons/fonts.gradle")
